kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: frontend
   labels:
     app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend
